# Q4_Sol_Danial1994

./: Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json
programs/token_generator/: Cargo.toml
programs/token_generator/src/: lib.rs
tests/: token_generator.ts
