[package]
name = "token_generator"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_generator"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
spl-token = "6.0.0" # Use compatible version
spl-associated-token-account = "1.0.0" # Use compatible version
solana-program = "1.18.26"
curve25519-dalek = "4.1.0" # Ensure compatibility
zeroize = "1.8.1"
